2008-05-26  Johnny Jacob  <jjohnny@novell.com>

	** Fix for Bug #533422
	
	* storage/Makefile.am (EXTRA_DIST): server_DATA should not
	be packed in dist tarballs.

2008-05-23  Øystein Gisnås  <oystein@gisnas.net>

	** Fix for bug #366250

	* configure.in: Don't compile/package semi-free RFCs and other IETF 
	documents that are easily accessible on the web. 

2008-05-14  Matthew Barnes  <mbarnes@redhat.com>

	** Fix for bug #523023

	* storage/exchange-storage.c: (account_new_folder): Another leak fix.

2008-05-13  Tor Lillqvist  <tml@novell.com>

	Final outstanding Win32 portability changes.

	* storage/Makefile.am: Link with SOCKET_LIBS, too. On Windows, use
	a relative path for CONNECTOR_PATH in the server file instead of
	the absolute compile-time EVOLUTION_privlibexecdir. Replace also
	EXEEXT in the server file.

	* storage/exchage-storage.h: On Windows, declare three char*
	variables that will hold the datadir, gladedir and imagesdir
	constructed at run-time.

	* storage/main.c: Define and initialise the three char* variables
	mentioned above. Assume that evolution-exchange is installed in
	the same run-time prefix as evolution-data-server. Use
	g_get_tmp_dir() instead of hardcoding /tmp. Use gstdio wrappers to
	cope with arbitrary Unicode pathnames on Windows. Don't bother
	with the folder mode checks on Windows, as the stat::st_mode field
	is mostly meaningless.

	* storage/exchange-autoconfig-wizard.c
	* storage/exchange-change-password.c: Construct glade and png file
	pathnames at run-time. Don't use compile-time gladedir and
	imagesdir on Windows.

	* storage/exchange-config-listener.c: Reorder includes into a more
	logical order. To cope with arbitrary Unicode pathnames on
	Windows, use gstdio wrappers, use GDir instead of dirent API, and
	use e_xml_parse_file() and e_xml_save_file() instead of libxml2
	API directly.

	* storage/ximian-connector-setup.c: Define and initialise the
	datadir, gladedir and imagesdir variables on Windows here,