@@ -22,11 +22,22 @@ schema_DATA = $(schema_in_files:.schemas.in.in=-$(BASE_VERSION).schemas)
 @INTLTOOL_SCHEMAS_RULE@
 
 install-data-local:
+if OS_WIN32
+	if test -z "$(DESTDIR)" ; then \
+		for p in $(schema_DATA) ; do \
+			(echo set GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE); \
+			 echo $(GCONFTOOL) --makefile-install-rule $$p) >_temp.bat; \
+			cmd /c _temp.bat; \
+			rm _temp.bat; \
+		done \
+	fi
+else
 	if test -z "$(DESTDIR)" ; then \
 		for p in $(schema_DATA) ; do \
 			GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $$p; \
 		done \
 	fi
+endif
 
 noinst_LTLIBRARIES = libexchangeaddressbook.la
 
